--- a/site/themes/airspace-hugo/static/css/lp19.css
+++ b/site/themes/airspace-hugo/static/css/lp19.css
@@ -9,7 +9,7 @@ body {
     margin: 0 auto;
     width: 100%
 }
-p, li{
+p{
     color: #414042;
     font-size: 14px;
 }
@@ -510,6 +510,10 @@ div.cta-form span {
     height: 60px;
     margin: auto;
     width: 320px
+}
+
+ul {
+    padding-inline-start: 0 !important
 }
 
 #error,
@@ -1429,4 +1433,3 @@ section.copyright {
         letter-spacing: 7px
     }
 }
-
