typo discrete to discreet

--- a/site/layouts/partials/capabilities.html
+++ b/site/layouts/partials/capabilities.html
@@ -10,7 +10,7 @@
             <div class="specialty">
                 <div class="capability capability__medical-paid icon-privacy">
                 </div>
-                <span class="capability__message">Discrete<br />representation</span>
+                <span class="capability__message">Discreet<br />representation</span>
             </div>
 
             <div class="specialty">
