copy changes "And recognized in" to "Recognized in"

--- a/site/layouts/partials/herolower.html
+++ b/site/layouts/partials/herolower.html
@@ -23,7 +23,7 @@
     <div class="container-fluid u-remove-all-padding">
         <div class="subhero">
             <div class="subhero__as-seen-on">
-                <span>And recognized in</span>
+                <span>Recognized in</span>
                 <div class="subhero__as-seen-on-icons images-in-a-row">
 
                     <div class="icon-latimes"></div>
@@ -40,11 +40,11 @@
                 <div class="subhero__no-win-desktop-no-win-text"><span>GET THE JUSTICE</span><span>YOU DESERVE</span>
                 </div>
 
-                    <picture>
-                        <source data-srcset="{{ .Site.BaseURL }}img/bestlawfirms-2020.webp" type="image/webp" class="subhero__image-zero-fee img-fluid lazyload">
-                        <source data-srcset="{{ .Site.BaseURL }}img/bestlawfirms-2020.jpg" type="image/jpg" class="subhero__image-zero-fee img-fluid lazyload">
-                        <img data-srcset="{{ .Site.BaseURL }}img/bestlawfirms-2020.jpg" data-src="{{ .Site.BaseURL }}img/bestlawfirms-2020.jpg" class="subhero__image-zero-fee img-fluid lazyload">
-                    </picture>
+                <picture>
+                    <source data-srcset="{{ .Site.BaseURL }}img/bestlawfirms-2020.webp" type="image/webp" class="subhero__image-zero-fee img-fluid lazyload">
+                    <source data-srcset="{{ .Site.BaseURL }}img/bestlawfirms-2020.jpg" type="image/jpg" class="subhero__image-zero-fee img-fluid lazyload">
+                    <img data-srcset="{{ .Site.BaseURL }}img/bestlawfirms-2020.jpg" data-src="{{ .Site.BaseURL }}img/bestlawfirms-2020.jpg" class="subhero__image-zero-fee img-fluid lazyload">
+                </picture>
 
             </div>
             <div class="subhero__border"></div>
@@ -63,3 +63,4 @@
         </div>
     </div>
 </div>
+
