--- a/site/layouts/partials/as-seen-on.html
+++ b/site/layouts/partials/as-seen-on.html
@@ -1,11 +1,12 @@
 <div class="subhero__as-seen-on mobile-column-wrap d-lg-none text-center">
-    <span>Recognized in:</span>
+    <span>And recognized in:</span>
     <div class="subhero__as-seen-on-icons images-in-a-row">
+
         <div class="icon-latimes"></div>
         <div class="icon-ktla5"></div>
         <div class="icon-abc-black"></div>
         <div class="icon-cnbc"></div>
         <div class="icon-fox"></div>
+
     </div>
 </div>
-
