footer hidden phone number update

--- a/site/layouts/partials/as-seen-on.html
+++ b/site/layouts/partials/as-seen-on.html
@@ -1,10 +1,15 @@
-<div class="subhero__as-seen-on mobile-column-wrap d-lg-none text-center">
-    <span>Recognized in:</span>
-    <div class="subhero__as-seen-on-icons images-in-a-row">
-        <div class="icon-latimes"></div>
-        <div class="icon-ktla5"></div>
-        <div class="icon-abc-black"></div>
-        <div class="icon-cnbc"></div>
-        <div class="icon-fox"></div>
+<!-- footer Start -->
+<div class="section-wrap-footer text-center">
+    <div class="footer">
+        <img data-src="{{ .Site.BaseURL }}img/wlf_long_white.svg" src=""
+             class="img-fluid lazyload" alt="Wilshire Law Firm logo">
+        <div class="footer__address">3055 Wilshire Blvd., 12th Floor<br> Los Angeles, CA 90010</div>
+        <div class="footer__copyright">&copy; 2020 Wilshire Law Firm |
+            <a href="https://www.wilshirelawfirm.com/privacy/" target="_blank" title="Wilshire Law Firm Privacy Policy"
+               rel="noreferrer">Privacy Policy</a>
+        </div>
+        <p style="display:none;">
+            <span style="display:none;">(888) 979-1278</span>
+        </p>
     </div>
 </div>
