--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -72,12 +72,20 @@
                     </div>
 
                     <p>
-                        California Labor codes 1102.5 and Code Section 6310, an employer cannot discharge or discriminate against an employee who has made a compliant or testified against their company for reporting company misconduct. This also means that if you are a
-                        whistleblower, your company can't legally retaliate against you, nor can a company enforce rules that would prevent you from being a whistleblower. Whistleblower rights exist to help keep companies in check and those brave enough to expose a company's
-                        wrong doings shouldn't be punished for doing so. If you feel that you have been retaliated against for whistleblowing, then you need to hire a whistleblowing discrimination lawyer who can protect your rights. Our whistleblowing lawyers are prepared to
-                        aggressively fight not only to protect your whistleblowing rights, but that you're compensated for losses or damages you may have sustained as a result of retaliation. Wilshire Law Firm's legal methods work, proof being that we've won our clients more
-                        than 750 million dollars in compensation. Retaliation for whistleblowing is never an acceptable approach a company should take against their employees. Seek justice today by calling Wilshire Law Firm for a free case consultation.
-
+                        California Labor codes 1102.5 and Code Section 6310, an employer cannot discharge or
+                        discriminate against an employee who has made a compliant or testified against their company for
+                        reporting company misconduct. This also means that if you are a whistleblower, your company
+                        can't legally retaliate against you, nor can a company enforce rules that would prevent you from
+                        being a whistleblower. Whistleblower rights exist to help keep companies in check and those
+                        brave enough to expose a company's wrong doings shouldn't be punished for doing so. If you feel
+                        that you have been retaliated against for whistleblowing, then you need to hire a whistleblowing
+                        discrimination lawyer who can protect your rights. Our whistleblowing lawyers are prepared to
+                        aggressively fight not only to protect your whistleblowing rights, but that you're compensated
+                        for losses or damages you may have sustained as a result of retaliation. Wilshire Law Firm's
+                        legal methods work, proof being that we've won our clients more than $750,000,000 in
+                        compensation. Retaliation for whistleblowing is never an acceptable approach a company should
+                        take against their employees. The process is entirely discreet and you don’t pay unless you win.
+                        Seek justice today by calling Wilshire Law Firm for a free case consultation.
                     </p>
                 </div>
 
