on-page phone numbers changed support text changed

--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -73,12 +73,20 @@
                     </div>
 
                     <p>
-                        According to the California Fair Employment and Housing Act (FEHA), employers must make reasonable accommodations and may not deny employment on the basis of having to make those reasonable accommodations. Furthermore, under The Americans with
-                        Disabilities Act of 1991, employers and fellow employees cannot discriminate or harass those with disabilities. And, yet, 1 in 4 people with a disability suffer from some form of discrimination. If you feel like you've been discriminated against,
-                        then it's time to hire a Wilshire Law Firm disability discrimination lawyer. With over 140 professionals working for Wilshire Law Firm, our team of lawyers will aggressively fight for you to be compensated a generous amount for the loss and damages
-                        you have sustained because of disability discrimination practices. Our firm has a proven record of not only fighting, but winning as well. So far, we have put more than 750 million dollars into the hands of our clients. Seek justice against companies
-                        that have used discriminatory practices against you by bringing your case to one of our disability discrimination lawyers. Wilshire Law Firm offers a free case consultation, so you have nothing to lose by calling us today.
-
+                        According to the California Fair Employment and Housing Act (FEHA), employers must make
+                        reasonable accommodations and may not deny employment on the basis of having to make those
+                        reasonable accommodations. Furthermore, under The Americans with Disabilities Act of 1991,
+                        employers and fellow employees cannot discriminate or harass those with disabilities. And, yet,
+                        1 in 4 people with a disability suffer from some form of discrimination. If you feel like you've
+                        been discriminated against, then it's time to hire a Wilshire Law Firm disability discrimination
+                        lawyer. With over 140 professionals working for Wilshire Law Firm, our team of lawyers will
+                        aggressively fight for you to be compensated a generous amount for the loss and damages you have
+                        sustained because of disability discrimination practices. Our firm has a proven record of not
+                        only fighting, but winning as well. So far, we have put more than $750,000,000 into the hands of
+                        our clients. Seek justice against companies that have used discriminatory practices against you
+                        by bringing your case to one of our disability discrimination lawyers. The process is entirely
+                        discreet and you don’t pay unless you win. Wilshire Law Firm offers a free case consultation, so
+                        you have nothing to lose by calling us today.
                     </p>
                 </div>
 
