--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -6,37 +6,46 @@
             </div>
         </div>
         <div class="row">
-            <div class="whywlf__form__container__before offset-sm-1 col-sm-10 offset-md-2 col-md-8 offset-lg-0 col-lg-4" STYLE="background: #3c4e66; display: flex;">
+            <div class="whywlf__form__container__before offset-sm-1 col-sm-10 offset-md-2 col-md-8 offset-lg-0 col-lg-4"
+                 STYLE="background: #3c4e66; display: flex;">
                 <div class="wlf-form__container">
                     <h3 class="text-left font-weight-bold">FREE CONSULTATION 24/7</h3>
                     <noscript>PLEASE ENABLE JAVASCRIPT IN YOUR BROWSER TO SEE THE FORM</noscript>
-                    <form name="LP19 Bottom Form" id="LP19_Bottom_Form" class="d-none" method="POST" data-netlify="true" action="/thank-you/" netlify-honeypot="honeypot-bot-field">
+                    <form name="LP19 Bottom Form" id="LP19_Bottom_Form" class="d-none" method="POST" data-netlify="true"
+                          action="/thank-you/" netlify-honeypot="honeypot-bot-field">
                         <div class="form-group d-none">
-                            <label>Don’t fill this out if you're human: <input name="honeypot-bot-field" /></label>
+                            <label>Don’t fill this out if you're human: <input name="honeypot-bot-field"/></label>
                         </div>
                         <div class="form-group">
                             <label for="firstName_bottom">First Name</label>
-                            <input  name="firstName" class="form-control wlf-form--empty" id="firstName_bottom" placeholder="First Name" aria-label="Enter Your First Name">
+                            <input name="firstName" class="form-control wlf-form--empty" id="firstName_bottom"
+                                   placeholder="First Name" aria-label="Enter Your First Name">
                             <div class="messages"></div>
                         </div>
                         <div class="form-group">
                             <label for="lastName_bottom">Last Name</label>
-                            <input name="lastName" class="form-control wlf-form--empty" id="lastName_bottom" placeholder="Last Name" aria-label="Enter Your Last Name">
+                            <input name="lastName" class="form-control wlf-form--empty" id="lastName_bottom"
+                                   placeholder="Last Name" aria-label="Enter Your Last Name">
                             <div class="messages"></div>
                         </div>
                         <div class="form-group">
                             <label for="phone_bottom">Phone</label>
-                            <input name="phone" type="tel" class="form-control bfh-phone wlf-form--empty" data-country="US" id="phone_bottom" placeholder="Phone" aria-label="Enter Your Phone">
+                            <input name="phone" type="tel" class="form-control bfh-phone wlf-form--empty"
+                                   data-country="US" id="phone_bottom" placeholder="Phone"
+                                   aria-label="Enter Your Phone">
                             <div class="messages"></div>
                         </div>
                         <div class="form-group">
                             <label for="email_bottom">Email</label>
-                            <input name="email" type="email" class="form-control wlf-form--empty" id="email_bottom" placeholder="Email" aria-label="Enter Your Email">
+                            <input name="email" type="email" class="form-control wlf-form--empty" id="email_bottom"
+                                   placeholder="Email" aria-label="Enter Your Email">
                             <div class="messages"></div>
                         </div>
                         <div class="form-group">
                             <label for="bottom-form-textarea">Tell Us How We Can Help You</label>
-                            <textarea name="description" class="form-control wlf-form--empty" id="bottom-form-textarea" rows="3" style="height:100px;" placeholder="Tell Us How We Can Help You" aria-label="Tell Us How We Can Help You"></textarea>
+                            <textarea name="description" class="form-control wlf-form--empty" id="bottom-form-textarea"
+                                      rows="3" style="height:100px;" placeholder="Tell Us How We Can Help You"
+                                      aria-label="Tell Us How We Can Help You"></textarea>
                             <div class="messages"></div>
                         </div>
                         <div class="form-group">
@@ -45,9 +54,9 @@
                             <div class="messages"></div>
                         </div>
                         <div class="form-group">
-                            <input type="hidden" id="pageurl-bottom"  name="pageurl-bottom" value="pageurl-bottom" />
+                            <input type="hidden" id="pageurl-bottom" name="pageurl-bottom" value="pageurl-bottom"/>
                             <input name="branchname-bottom" id="branchname-bottom" type="hidden" value="lp19short">
-                            <input type="hidden" id="caseType"  name="caseType" value="Employment" />
+                            <input type="hidden" id="caseType" name="caseType" value="Employment"/>
                             <div class="messages"></div>
                         </div>
                         <div class="form-group whywlf__submit">
@@ -55,14 +64,18 @@
                             <div class="messages"></div>
                         </div>
                     </form>
-                    <p style="font-size: 8px;line-height: 1.25;color: #b4b4b4;margin-top: 10px;margin-bottom: 0;">By submitting this form, you agree to receive calls at any time, including hours outside of business hours. This is so that we may reach you as soon as possible in order to consult on your potential case.</p>
+                    <p style="font-size: 8px;line-height: 1.25;color: #b4b4b4;margin-top: 10px;margin-bottom: 0;">By
+                        submitting this form, you agree to receive calls at any time, including hours outside of
+                        business hours. This is so that we may reach you as soon as possible in order to consult on your
+                        potential case.</p>
                 </div>
             </div>
             <div class="whywlf__paragraph_container offset-sm-1 col-sm-10 offset-md-2 col-md-8 offset-lg-0 col-lg-7">
                 <picture class="d-none d-lg-block">
                     <source data-srcset="{{ .Site.BaseURL }}img/CELA.webp" type="image/webp" class="img-fluid">
                     <source data-srcset="{{ .Site.BaseURL }}img/CELA.jpg" type="image/jpg" class="img-fluid">
-                    <img data-src="{{ .Site.BaseURL }}img/CELA.jpg" src="" class="img-fluid lazyload float-right" alt="">
+                    <img data-src="{{ .Site.BaseURL }}img/CELA.jpg" src="" class="img-fluid lazyload float-right"
+                         alt="">
                 </picture>
 
                 <div class="text-left supporttext__paragraph_container">
@@ -73,13 +86,23 @@
                         </div>
                     </div>
 
-                    <p>
-                        Title VII of the Pregnancy Discrimination Act states that you cannot be denied a job, promotion, or be terminated because you are pregnant and that you have the “same rights, leave privileges and other benefits, as other workers who are disabled from working.”
-                        On a state level, the California Fair Employment and Housing Act (FEHA) reinforces this act by stating that “it is an unlawful employment practice for any employer with one or more employees or other covered entities to harass an employee or applicant because
-                        of pregnancy or perceived pregnancy, childbirth, breastfeeding, or any related medical conditions.” The law is clear and Wilshire Law Firm intends to uphold this law. When supervisors and human resources fail you, you need a law firm you can count on like Wilshire Law Firm. Our top
-                        pregnancy discrimination lawyers are on your side and ready to protect your rights to work without facing pregnancy discrimination. By using our employment law legal expertise, our lawyers will aggressively fight to win your case. Our pregnancy discrimination lawyers' aim to provide
-                        you with maximum compensation for the damages and losses you may have suffered in the workplace. Trust us with your case like so many others before you who have seen their compensation double and even quadruple through our services, resulting in more than 750 million dollars being
-                        put into the hands of our client. Take action by calling Wilshire Law Firm today for your free case consultation.
+                    <p>Title VII of the Pregnancy Discrimination Act states that you cannot be denied a job, promotion,
+                        or be terminated because you are pregnant and that you have the “same rights, leave privileges
+                        and other benefits, as other workers who are disabled from working.” On a state level, the
+                        California Fair Employment and Housing Act (FEHA) reinforces this act by stating that “it is an
+                        unlawful employment practice for any employer with one or more employees or other covered
+                        entities to harass an employee or applicant because of pregnancy or perceived pregnancy,
+                        childbirth, breastfeeding, or any related medical conditions.” The law is clear and Wilshire Law
+                        Firm intends to uphold this law. When supervisors and human resources fail you, you need a law
+                        firm you can count on like Wilshire Law Firm. Our top pregnancy discrimination lawyers are on
+                        your side and ready to protect your rights to work without facing pregnancy discrimination. By
+                        using our employment law legal expertise, our lawyers will aggressively fight to win your case.
+                        Our pregnancy discrimination lawyers' aim to provide you with maximum compensation for the
+                        damages and losses you may have suffered in the workplace. Trust us with your case like so many
+                        others before you who have seen their compensation double and even quadruple through our
+                        services, resulting in more than $750,000,000 being put into the hands of our client. The
+                        process is entirely discreet and you don’t pay unless you win. Take action by calling Wilshire
+                        Law Firm today for your free case consultation.
                     </p>
                 </div>
 
