--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -9,7 +9,7 @@
                rel="noreferrer">Privacy Policy</a>
         </div>
         <p style="display:none;">
-            <span style="display:none;">(888) 979-1278</span>
+            <span style="display:none;">{{ .Site.Params.phoneNumHidden }}</span>
         </p>
     </div>
 </div>
