--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -14,9 +14,16 @@
                      src="{{ .Site.BaseURL }}img/wlf_shield_white.svg" class="img-fluid" alt="Wilshire Law Firm logo">
             </section>
             <div class="section-header-right">
-                <a class="subhero__phone-num d-sm-block d-md-none capPhone" href="tel:18553780629"
-                   onclick="dataLayer.push({'event':'Contact', 'eventAction':'Call', 'eventNumber': 'Header Mobile Call- 1.855.378.0629'});">
-                    <span>1.855.378.0629</span>
+                <a class="subhero__phone-num d-sm-block d-md-none capPhone"
+                   href="tel:{{ .Site.Params.phoneNumDigitsOnly }}"
+                   onclick="dataLayer.push(
+                       {
+                       'event':'Contact',
+                       'eventAction':'Call',
+                        'eventNumber': 'Header Mobile Call- {{ .Site.Params.phoneNumDigitsOnly }}'
+                       }
+                       );">
+                    <span class="phoneNumberFormatted"></span>
                 </a>
                 <img src="" data-src="{{ .Site.BaseURL }}img/header_divider.png" class="img-fluid lazyload" alt="">
                 <section class="hablamos24" style="width:100%;">
@@ -38,9 +45,14 @@
             <span>HABLAMOS ESPANOL &#8226; AVAILABLE 24/7</span>
         </div>
         <div class="header__rightsection">
-            <a class="header__phonenum capPhone font-weight-semi" href="tel:18553780629"
-               onclick="dataLayer.push({'event':'Contact', 'eventAction':'Call', 'eventNumber': 'Header Mobile Call- 1.855.378.0629'});">
-              1.855.378.0629
+            <a class="header__phonenum capPhone font-weight-semi" href="tel:{{ .Site.Params.phoneNumDigitsOnly }}"
+               onclick="dataLayer.push(
+                   {
+                   'event':'Contact',
+                    'eventAction':'Call',
+                    'eventNumber': 'Header Mobile Call- {{ .Site.Params.phoneNumDigitsOnly }}'
+                   });">
+                <span class="phoneNumberFormatted"></span>
             </a>
             <div class="header__chatwidget header__text1"
                  onclick="window.open('https://platform.clientchatlive.com/w/chat/#/chat/wChz3T/register', '', 'width=800,height=500,toolbar=0,menubar=0,location=0,status=0,scrollbars=1,menubar=0,toolbar=0,resizable=1,left=50,top=50');">
